Prepare StageFront for Render and Vercel deployment